# litebenchmark

./: README.md  langchain_agent.py  pyproject.toml  verify_bench.py
src/simple_bench/: __init__.py  core.py  loaders.py  scorers.py
