[project]
name = "simple-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.4.1",
    "langchain-core>=0.3.80",
    "langchain-openai>=0.3.35",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "ragas>=0.3.9",
    "tqdm>=4.67.1",
]
